<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Editprofile"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="57dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textBack"
            android:layout_width="82dp"
            android:layout_height="16dp"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintStart_toEndOf="@id/back"
            android:layout_marginRight="5dp"
            android:text="@string/back_to_profile"
            android:textSize="12sp"
            android:textColor="#767676" />

        <TextView
            android:id="@+id/textEdit"
            android:layout_width="120dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintLeft_toLeftOf="@id/back"
            android:layout_marginTop="15dp"
            android:text="@string/edit_profile"
            android:textSize="24sp"
            android:fontFamily="Nunito-Bold"
            android:textColor="#030F09" />
        <!--        <ImageView-->
        <!--            android:id="@+id/youravatar"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/textEdit"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:src="@drawable/avatar"/>-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/youravatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/textEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatarman" />

        <TextView
            android:id="@+id/editAvatar"
            android:layout_width="136dp"
            android:layout_height="21dp"
            app:layout_constraintTop_toBottomOf="@+id/youravatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_picture"
            android:textSize="16sp"
            android:fontFamily="Nunito-Bold"
            android:textColor="#30BE76" />

        <TextView
            android:id="@+id/textFullName"
            android:layout_width="65dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@id/editAvatar"
            app:layout_constraintLeft_toLeftOf="@id/textEdit"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textColor="#A8A8A8"
            android:textSize="14sp"
            android:fontFamily="Nunito-Regular" />

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textFullName"
            app:layout_constraintLeft_toLeftOf="@id/textFullName"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textColor="#030F09"
            android:fontFamily="Nunito-Regular"
            android:hint="@string/your_full_name_in_profile"
            android:textColorHint="#ACA8A8"
            android:inputType="text"
            tools:ignore="autofill" />

        <TextView
            android:id="@+id/textBio"
            android:layout_width="22dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/editFullName"
            app:layout_constraintLeft_toLeftOf="@id/editFullName"
            android:layout_marginTop="12dp"
            android:text="@string/bio"
            android:textColor="#A8A8A8"
            android:textSize="14sp"
            android:fontFamily="Nunito-Regular" />

        <EditText
            android:id="@+id/editBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textBio"
            app:layout_constraintLeft_toLeftOf="@id/textBio"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:textSize="16sp"
            android:textColor="#030F09"
            android:fontFamily="Nunito-Regular"
            android:hint="@string/your_bio_in_profile"
            android:textColorHint="#ACA8A8"
            android:inputType="text"
            tools:ignore="autofill" />

        <TextView
            android:id="@+id/textPrivate"
            android:layout_width="153dp"
            android:layout_height="22dp"
            app:layout_constraintTop_toBottomOf="@+id/editBio"
            app:layout_constraintLeft_toLeftOf="@id/editBio"
            android:layout_marginTop="50dp"
            android:text="@string/private_information"
            android:textColor="#030F09"
            android:textSize="16sp"
            android:fontFamily="Nunito-Bold" />

        <TextView
            android:id="@+id/textEmail2"
            android:layout_width="35dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@id/textPrivate"
            app:layout_constraintLeft_toLeftOf="@id/textPrivate"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#A8A8A8"
            android:textSize="14sp"
            android:fontFamily="Nunito-Regular" />

        <EditText
            android:id="@+id/editViewEmail2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textEmail2"
            app:layout_constraintLeft_toLeftOf="@id/textEmail2"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textColor="#030F09"
            android:fontFamily="Nunito-Regular"
            android:hint="@string/your_email_in_profile"
            android:textColorHint="#ACA8A8"
            android:inputType="textEmailAddress"
            tools:ignore="autofill" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="42dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@id/editViewEmail2"
            app:layout_constraintLeft_toLeftOf="@id/editViewEmail2"
            android:layout_marginTop="12dp"
            android:text="@string/phone"
            android:textColor="#A8A8A8"
            android:textSize="14sp"
            android:fontFamily="Nunito-Regular" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textPhone"
            app:layout_constraintLeft_toLeftOf="@id/textPhone"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textColor="#030F09"
            android:fontFamily="Nunito-Regular"
            android:hint="@string/your_phone_in_profile"
            android:textColorHint="#ACA8A8"
            android:inputType="phone"
            tools:ignore="autofill" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="319.41dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/editPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="@string/save_profile"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:gravity="center" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>